--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#0BA463</color>
+    <color name="colorPrimaryDark">#0BA463</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSplashBackground">#E5E5E5</color>
+    <color name="colorNavItemUnselected">#BABABA</color>
+    <color name="white">@android:color/white</color>
 </resources>
