--- a/app/src/main/res/layout/activity_tour.xml
+++ b/app/src/main/res/layout/activity_tour.xml
@@ -6,4 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".tour.TourActivity">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/tour_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/page_one_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="64dp"
+        android:src="@drawable/ic_page_indicator_selector"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/page_two_indicator"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:src="@drawable/ic_page_indicator_selected" />
+
+    <ImageView
+        android:id="@+id/page_two_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/ic_page_indicator_selector"
+        app:layout_constraintBottom_toBottomOf="@id/page_one_indicator"
+        app:layout_constraintEnd_toStartOf="@id/page_three_indicator"
+        app:layout_constraintStart_toEndOf="@id/page_one_indicator"
+        app:layout_constraintTop_toTopOf="@id/page_one_indicator"
+        tools:src="@drawable/ic_page_indicator_unselected" />
+
+    <ImageView
+        android:id="@+id/page_three_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:src="@drawable/ic_page_indicator_selector"
+        app:layout_constraintBottom_toBottomOf="@id/page_two_indicator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/page_two_indicator"
+        app:layout_constraintTop_toTopOf="@id/page_two_indicator"
+        tools:src="@drawable/ic_page_indicator_unselected" />
 </androidx.constraintlayout.widget.ConstraintLayout>
