--- a/app/src/main/res/layout/earning_list_item.xml
+++ b/app/src/main/res/layout/earning_list_item.xml
@@ -10,5 +10,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/earningImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            />
+
+        </RelativeLayout>
+
     </androidx.cardview.widget.CardView>
 </FrameLayout>
