Modified list item

--- a/app/src/main/res/layout/earning_list_item.xml
+++ b/app/src/main/res/layout/earning_list_item.xml
@@ -2,12 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialCardView.Cut"
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#DEE4E4"
         android:layout_margin="16dp">
 
         <RelativeLayout
@@ -17,13 +20,75 @@
 
         <ImageView
             android:id="@+id/earningImage"
-            android:layout_width="100dp"
+            android:layout_width="50dp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            />
+            android:src="@drawable/ic_baseline_monetization_on_24"/>
+
+            <LinearLayout
+                android:id="@+id/detailsLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/earningImage"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/titleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="bold"
+                    tool:text="Salary"
+                    android:fontFamily="sans-serif"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:id="@+id/subTitleTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif"
+                    tool:text="Got new shirts and shorts"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textColor="#000000"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/otherDetailsLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/detailsLayout"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/costTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textStyle="bold"
+                    tool:text="+$750"
+                    android:fontFamily="sans-serif"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="#000000"/>
+
+                <TextView
+                    android:id="@+id/dateTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif"
+                    tool:text="2020-12-7"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textColor="#000000"/>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
