--- a/app/src/main/res/layout/earning_list.xml
+++ b/app/src/main/res/layout/earning_list.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="0dp"
+        android:background="#F4F4F4"
         tools:listitem="@layout/earning_list_item"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
