--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,8 @@
         <item name="android:windowBackground">@color/colorSplashBackground</item>
         <item name="colorPrimaryDark">@color/colorSplashBackground</item>
     </style>
+
+    <style name="ButtonProgressBarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorAccent">@color/white</item>
+    </style>
 </resources>
