--- a/app/src/main/res/layout/fragment_main_dialog.xml
+++ b/app/src/main/res/layout/fragment_main_dialog.xml
@@ -35,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/dialog_title_text">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/rubik"
@@ -74,6 +75,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_input_category">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/rubik"
@@ -93,6 +95,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_input_amount">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/rubik"
