load earning and expense data

--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -24,7 +24,7 @@
                 android:layout_height="100dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                tools:src="@drawable/ic_receive_cash" />
+                android:src="@drawable/ic_receive_cash" />
 
             <LinearLayout
                 android:id="@+id/detailsLayout"
@@ -40,6 +40,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/rubik"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:textColor="#000000"
                     android:textStyle="bold"
@@ -51,6 +53,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/rubik"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:textAppearance="?android:textAppearanceSmall"
                     android:textColor="#000000"
                     tools:text="Got new shirts and shorts" />
